--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django==3.2.9
 django-cors-headers==3.13.0
 django-debug-toolbar==3.6.0
 whitenoise==6.2.0  # for serving static files
+djangorestframework
 
 # Django 3.0 async requirements
 gunicorn==20.1.0
@@ -28,4 +29,4 @@ python-telegram-bot==13.15  # last sync version
 
 # monitoring
 # sentry-sdk
-watchdog 
+watchdog
